--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -34,16 +34,31 @@
                         {% endif %}
                     {% endfor %}
                     
-                    {% if userReview %}
-                        <div class="review-actions">
-                            <button onclick="window.location.href='{{ path('app_review_edit', {id: userReview.id}) }}'" 
-                                    class="btn btn-primary">
-                                <i class="fas fa-edit me-1"></i> Edit
+                    <div class="action-buttons">
+                        {% if book.user == app.user %}
+                            <button onclick="window.location.href='{{ path('app_book_edit', {id: book.id}) }}'" 
+                                    class="btn btn-primary me-2">
+                                <i class="fas fa-edit me-1"></i> Edit Book
                             </button>
-                        </div>
-                    {% else %}
-                        <button type="button" onclick="window.location.href='{{ path('app_review_new', { 'bookId': book.id }) }}'" class="btn btn-primary">Write a Review</button>
-                    {% endif %}
+                            <button class="btn btn-danger delete-btn"
+                                    data-url="{{ path('app_book_delete', {id: book.id}) }}"
+                                    data-message="Are you sure you want to delete this book? This action cannot be undone."
+                                    data-title="Delete Book">
+                                <i class="fas fa-trash me-1"></i> Delete Book
+                            </button>
+                        {% endif %}
+                        
+                        {% if userReview %}
+                            <div class="review-actions mt-3">
+                                <button onclick="window.location.href='{{ path('app_review_edit', {id: userReview.id}) }}'" 
+                                        class="btn btn-primary">
+                                    <i class="fas fa-edit me-1"></i> Edit Review
+                                </button>
+                            </div>
+                        {% else %}
+                            <button type="button" onclick="window.location.href='{{ path('app_review_new', { 'bookId': book.id }) }}'" class="btn btn-primary">Write a Review</button>
+                        {% endif %}
+                    </div>
                 {% else %}
                     <button type="button" onclick="window.location.href='{{ path('app_login') }}'" class="btn btn-secondary">Login to Review</button>
                 {% endif %}
@@ -115,7 +130,7 @@
         </div>
 
         {% if book.user == app.user %}
-            <a href="{{ path('app_book_edit', {'id': book.id}) }}" class="btn btn-secondary">Edit Book</a>
+            {# Removed the edit book button as it is now included in the action-buttons div #}
         {% endif %}
     </div>
 
